--- a/css/styles.css
+++ b/css/styles.css
@@ -75,12 +75,71 @@ i {
   padding-bottom: 3px;
 }
 
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: fit-content;
+  height: fit-content;
+  text-align: center;
+  border-radius: 4px;
+  border-style: none;
+  font-size: medium;
+}
+
+.cancel {
+  width: fit-content;
+  border-radius: 4px;
+  height: 100%;
+  border-style: none;
+  padding-bottom: 3px;
+  background-color: #b6b6b6;
+  color: black;
+  font-size: large;
+}
+
+.confirm {
+  width: fit-content;
+  border-radius: 4px;
+  height: 50px;
+  border-style: none;
+  padding-bottom: 3px;
+  background-color: #dc2626;
+  color: white;
+  font-size: large;
+}
+
+.delete-entry,
+a {
+  color: #dc2626;
+}
+
 .width-100 {
   width: 100%;
 }
 
 .color-purple {
   background-color: #562b81;
+}
+
+.padding-top-10 {
+  padding-top: 10px;
+}
+
+.padding-bot-10 {
+  padding-bottom: 10px;
 }
 
 .margin-0 {
@@ -131,6 +190,10 @@ i {
   align-items: flex-end;
 }
 
+.align-flex-start {
+  align-items: flex-start;
+}
+
 .weight-600 {
   font-weight: 600;
 }
@@ -145,4 +208,8 @@ i {
 
 .pointer {
   cursor: default;
+}
+
+.text-center {
+  text-align: center;
 }
